# coupe20

./: .gitignore  .gitmodules  .travis.yml  README.md
asserv/stm32/: CMakeLists.txt  compile.sh  gdb.sh
asserv/stm32/include/: block.h  compat.h  control.h  encoder.h  motor.h  protocol.h  protocol.hpp  pwm.h  robotstate.h  serial.h
asserv/stm32/src/: block.c  compat.c  control.c  main.cpp  motor.cpp  newlib.c  protocol.cpp  robotstate.c  serial_sender.cpp  stm32f3xx_it.c
ros_ws/src/actuators/dispatcher/: CMakeLists.txt  package.xml
ros_ws/src/actuators/dispatcher/action/: Barrel.action  Dispatch.action
ros_ws/src/actuators/dispatcher/src/: actuators_node.py  actuators_node_old.py
ros_ws/src/actuators/driver_ax12/: CMakeLists.txt  README.md  package.xml
ros_ws/src/actuators/driver_ax12/include/: ax12_driver.h  ax12_server.h  ax12_table.h
ros_ws/src/actuators/driver_ax12/msg/: Ax12Command.msg
ros_ws/src/actuators/driver_ax12/src/: ax12_driver.cpp  ax12_node.cpp  ax12_server.cpp
ros_ws/src/actuators/driver_ax12/srv/: SetAx12Param.srv
ros_ws/src/actuators/drivers_ard_others/: CMakeLists.txt
ros_ws/src/ai/ai_game_manager/: package.xml
ros_ws/src/ai/ai_game_manager/msg/: GameTime.msg
ros_ws/src/ai/ai_game_manager/src/: game_manager_node.py  init_service.cpp
ros_ws/src/ai/ai_game_manager/srv/: SetTimer.srv
ros_ws/src/ai/ai_scheduler/: CMakeLists.txt  README.md
ros_ws/src/ai/game_manager/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/ai/game_manager/msg/: ArmRequest.msg  GameStatus.msg
ros_ws/src/ai/game_manager/src/: game_manager_node.py  init_service.cpp
ros_ws/src/ai/game_manager/srv/: NodeReady.srv
ros_ws/src/ai/scheduler/: CMakeLists.txt  README.md  package.xml
ros_ws/src/ai/scheduler/msg/: TaskResult.msg
ros_ws/src/ai/scheduler/src/: scheduler_communication.py  scheduler_node.py
ros_ws/src/ai/scheduler/srv/: test.srv
ros_ws/src/ai_scheduler/: package.xml
ros_ws/src/ai_scheduler/msg/: AIScore.msg
ros_ws/src/ai_scheduler/src/: scheduler_communication.py  scheduler_node.py
ros_ws/src/ai_scheduler/src/ai/: __init__.py  ai_loader.py  game_status_client.py  timer_client.py
ros_ws/src/definitions/: CMakeLists.txt  package.xml
ros_ws/src/definitions/def/ai/: system_orders.xml
ros_ws/src/definitions/def/map/: 1_Config.yml  1_config.xml  2_Terrain.yml  2_terrain.xml  3_Zones.yml  3_waypoints.xml  4_objects.xml  table2019.stl  table2020.stl
ros_ws/src/definitions/def/rviz/: general.rviz
ros_ws/src/definitions/launch/: debug_station.launch  general.launch  test_asserv.launch  test_collision.launch
ros_ws/src/definitions/src/: definitions_node.py
ros_ws/src/drivers_teraranger/: package.xml
ros_ws/src/drivers_teraranger/src/: teraranger_node.py
ros_ws/src/helpers/ard_hmi/: CMakeLists.txt  README.md  package.xml
ros_ws/src/helpers/drivers_port_finder/: package.xml
ros_ws/src/helpers/drivers_port_finder/src/: port_finder_node.py
ros_ws/src/map/: CMakeLists.txt  README.md  package.xml
ros_ws/src/movement_actuators/: CMakeLists.txt
ros_ws/src/movement_actuators/action/: Arm.action  CubePicker.action
ros_ws/src/movement_actuators/src/: actuators_node_old.py
ros_ws/src/movement_actuators/srv/: ActivateCanon.srv
ros_ws/src/navigation_collisions/: CMakeLists.txt  README.md  package.xml
ros_ws/src/navigation_collisions/src/: collisions_node.cpp  collisions_node.py  collisions_robot.py  collisions_subscriptions.py
ros_ws/src/navigation_navigator/: CMakeLists.txt
ros_ws/src/navigation_navigator/action/: DoGoto.action  DoGotoWaypoint.action
ros_ws/src/navigation_navigator/src/: marker_server_node.py  navigator_node.py  planning.py
ros_ws/src/navigation_pathfinder/: CMakeLists.txt
ros_ws/src/navigation_pathfinder/src/: pathfinder_node.cpp
ros_ws/src/navigation_pathfinder/srv/: FindPath.srv
ros_ws/src/recognition_enemy_tracker/: CMakeLists.txt
ros_ws/src/recognition_enemy_tracker/def/: enemy_tracker_properties.xml
ros_ws/src/recognition_enemy_tracker/src/: enemy_tracker_node.py  enemy_tracker_properties.py
ros_ws/src/recognition_localizer/: CMakeLists.txt  package.xml
ros_ws/src/recognition_localizer/src/: localizer_node.py
ros_ws/src/recognition_objects_classifier/: CMakeLists.txt  package.xml
ros_ws/src/recognition_objects_classifier/cfg/: ObjectsClassifier.cfg
ros_ws/src/recognition_objects_classifier/include/: main_thread.h  map_objects.h  markers_publisher.h  objects_listener.h  processing_thread.h  shapes.h
ros_ws/src/recognition_objects_classifier/msg/: CircleObstacleStamped.msg
ros_ws/src/recognition_objects_classifier/src/: main_thread.cpp  objects_classifier_node.cpp  shapes.cpp
stm32_asserv/: .CMakeLists.txt.kate-swp  CMakeLists.txt  STM32F303K8Tx_FLASH.ld  compile.sh  gdb_on_stm32_chip.md
stm32_asserv/getters_for_simulation/: getters.c  getters.h
stm32_asserv/include/: PID.h  QueueList.h  String.h  Timer.h  _shared_PID.h  _shared_control.h  _shared_goals.h  _shared_local_math.h  _shared_parameters.h  _shared_protocol.h  _shared_robotstate.h  block.h  brushlessMotor.h  can.h  canSender.h  command_law.h  compat.h  constantes.h  control.h  control_shared.h  emergency.h  encoder.h  goals.h  local_math.h  main.h  motor.h  parameters.h  pins.h  protocol.h  protocol.hpp  protocol_shared.h  robotstate.h  robotstate_shared.h  sender_wrapper.h  serial.h  serial_sender.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  string.hpp
stm32_asserv/simu_only_functions/: simu_functions.c  simu_functions.h
stm32_asserv/src/: .main.cpp.kate-swp  PID.c  String.cpp  Timer.cpp  _shared_PID.c  _shared_control.c  _shared_goals.c  _shared_local_math.c  _shared_protocol.c  _shared_robotstate.c  block.c  block.cpp  brushlessMotor.cpp  can.cpp  canSender.cpp  command_law.c  compat.cpp  control.c  control.cpp  control_shared.c  emergency.c  encoder.c  goals.c  goals.cpp  local_math.c  local_math.cpp  main-old.cpp  main.cpp  motor.c  motor.cpp  newlib.c  protocol.cpp  protocol_shared.c  pwm.cpp  robotstate.c  robotstate.cpp  robotstate_shared.c  sender_wrapper.cpp  serial.cpp  serial_sender.cpp  (+4 more)
(+885 files in other folders)
