<?xml version="1.0"?>
<package format="2">
    <name>memory_definitions</name>
    <version>0.0.0</version>
    <description>
        Package with all the definition files the others packages need.
        A service returns a full absolute path to the requested file.
        The service can dynamically adapt the path based on ROS params. 
            E.g. The name of the robot, which will lead to different description files.
    </description>
    <license>GPLv3</license>
    <author email="utcoupe@assos.utc.fr">milesial</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>rospy</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
