<?xml version="1.0"?>
<package format="2">
    <name>drivers_teraranger</name>
    <version>0.0.1</version>
    <description>
        Teraranger driver interface.
    </description>
    <license>GPLv3</license>
    <author email="tomesman@gmail.com">Thomas Fuhrmann</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>>
    <depend>drivers_port_finder</depend>>
    <depend>drivers_ard_others</depend>>
    <depend>ai_game_manager</depend>>
    <export>
    </export>
</package>
