<?xml version="1.0"?>
<package format="2">
    <name>navigation_collisions</name>
    <version>1.0.0</version>
    <description>The navigation_collisions package</description>
    <license>GLPv3</license>
    <author email="pielaclau@gmail.com">MadeInPierre</author>
    <author email="mindstan@hotmail.fr">Mindstan</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>memory_map</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
