<?xml version="1.0"?>
<package format="2">
    <name>recognition_localizer</name>
    <version>0.0.0</version>
    <description>
        The recognition_localizer package updates the tf /robot thanks to the odometry data from the asserv and other data like lidar.
    </description>
    <license>GPLv3</license>
    <author email="utcoupe@assos.utc.fr">milesial</author>
    <maintainer email="utcoupe@asso.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <export>
    </export>
</package>
