<?xml version="1.0"?>
<package format="2">
    <name>recognition_objects_classifier</name>
    <version>0.0.1</version>
    <description>
        Takes objects (rects, circles, segments) and classifies them as outside the map or as inside the map.
    </description>
    <license>GPLv3</license>
    <author email="utcoupe@assos.utc.fr">milesial</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>processing_lidar_objects</depend>
    <depend>processing_belt_interpreter</depend>
    <depend>ai_game_manager</depend>
    <depend>dynamic_reconfigure</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
