<?xml version="1.0"?>
<package format="2">
    <name>movement_actuators</name>
    <version>0.0.2</version>
    <description>The actuators package</description>
    <license>GPLv3</license>
    <author>P. Potiron</author>
    <author email="tomesman@gmail.com">Thomas Fuhrmann</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>actionlib</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>actionlib_msgs</depend>
    <depend>ai_game_manager</depend>
</package>