<?xml version="1.0"?>
<package format="2">
    <name>ai_game_manager</name>
    <version>0.0.1</version>
    <description>The ai_game_manager package</description>
    <license>GPLv3</license>
    <author email="pielaclau@gmail.com">MadeInPierre</author>
    <author email="mindstan@hotmail.fr">Mindstan</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ai_scheduler</build_depend>
    <build_depend>message_generation</build_depend>
    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <exec_depend>message_runtime</exec_depend>
</package>
